@@ -1,6 +1,7 @@
 2008-07-18 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Fixed bug #8982: convert linebraks to unix.
 	* Feature #8721: Plaintext is compatible to DAM
+	* Feature: Test Newsletter's subject will be prepended with additional subject.
 	
 2008-07-13 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* added UserTS to open default tab
